--- a/13-03-2024-PilasAvanzadoInsercion/13-03-2024-PilasAvanzadoInsercion.cbp
+++ b/13-03-2024-PilasAvanzadoInsercion/13-03-2024-PilasAvanzadoInsercion.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="11-03-pilasAvanzado" />
+		<Option title="13-03-2024-PilasAvanzadoInsercion" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/11-03-pilasAvanzado" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/13-03-2024-PilasAvanzadoInsercion" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/11-03-pilasAvanzado" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/13-03-2024-PilasAvanzadoInsercion" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
