agregue listado de funciones a realizar para el miercoles 22/05

--- a/13-05-2023-Estructuras/13-05-2023-Estructuras.cbp
+++ b/13-05-2023-Estructuras/13-05-2023-Estructuras.cbp
@@ -50,6 +50,7 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="pilaAlumno.h" />
+		<Unit filename="tpFinal.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
